GameBasics.ts: Added root node processing in cloneAndFixIds (was duplicating Ids) UI           : Small style fixes after main font change                In spectator mode, main player panel (near the map) is now the first processed player panel                Added special font for milestones      	       Removed pointer-events and visibility on #hex_0_1

--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -15,6 +15,7 @@
 
 #ebd-body {
   --mars-font: 'SpaceFont';
+  --awards-font: 'Tangerine';
 }
 
 /* the other files */
@@ -40,6 +41,16 @@
   font-style: normal;
   font-display: swap;
 }*/
+
+/* latin */
+@font-face {
+  font-family: 'Tangerine';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/tangerine/v17/IurY6Y5j_oScZZow4VOxCZZM.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 /* thai */
 @font-face {
